# azureRustSDKMRE

./: Cargo.toml
src/: main.rs
