[package]
name = "MRE_client_reuse_issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# cloud
azure_identity = "0.12.*"
azure_storage = "0.12.*"
azure_storage_datalake = "0.12.*"

# async
tokio = { version = "1.28.*", features = ["macros", "rt-multi-thread", "fs"] }

# general
lazy_static = "1.4.*"
uuid = { version = "1.3.*", features = ["v4"]}

# errors
miette = "5.9.*"
thiserror = "1.0.*"

